--- a/Palindroma/index.html
+++ b/Palindroma/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-    <h1>Palindroma</h1>
+    <h1>Is Palindroma?</h1>
+
+    <h3 id="inputUtente"></h3>
+    <h3 id="risultato"></h3>
+
 
     
     <script src="./Palindroma.js"></script>
